--- a/src/styles/overrides.scss
+++ b/src/styles/overrides.scss
@@ -2,7 +2,6 @@
 
 body {
   padding: 1rem 2rem;
-  overflow-x: hidden;
 }
 
 a {
